--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,18 @@
 	"description": "Currency converter for SilverStripe CMS",
 	"type": "silverstripe-module",
 	"keywords": ["silverstripe", "currency", "conversion"],
+	"license": "MIT",
 	"require": {
 		"php": ">=5.3.2",
 		"silverstripe/framework": "3.1.*",
 		"guzzle/http": "~3.1"
 	},
-	"require-dev": {
-		"phpunit/PHPUnit": "~3.7@stable"
-	},
+	"authors": [
+		{
+			"name": "Conrad Dobbs",
+			"email": "conrad@webtorque.co.nz"
+		}
+	],
 	"config": {
 		"process-timeout": 600
 	}
